Fixed spacing issues in about.html

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -138,10 +138,21 @@ main {
       }
     }
 
+    h1,
+    h2,
+    h3 {
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     .job-img > img {
       border-radius: 25%;
       margin: 0.5rem;
       border: 2px solid white;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
 
       &:hover {
         border-color: $secondary-color;
